--- a/KnightMovesThrice/KnightMovesThrice/ViewControllers/ChessboardMain/ChessboardMainViewController.xib
+++ b/KnightMovesThrice/KnightMovesThrice/ViewControllers/ChessboardMain/ChessboardMainViewController.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ChessboardMainViewController" customModule="KnightMovesThrice" customModuleProvider="target">
             <connections>
                 <outlet property="boardSizeSlider" destination="SfC-u5-YXA" id="Sjs-ZH-xHE"/>
+                <outlet property="chessboardSizePromptLabel" destination="eca-5L-R34" id="5j9-dY-hlh"/>
                 <outlet property="collectionView" destination="04k-3X-vKx" id="Bum-kF-5eB"/>
                 <outlet property="findPathButton" destination="2Rp-qJ-Ahq" id="l0q-X3-Xq4"/>
                 <outlet property="modeSwitch" destination="PLR-Tt-Bnh" id="62F-7y-ocH"/>
@@ -48,14 +49,14 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="teT-CW-Kfn" userLabel="BottomView">
                             <rect key="frame" x="0.0" y="437.33333333333326" width="393" height="321.66666666666674"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slide to change the size of the chessboard." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eca-5L-R34" userLabel="Chessboard size prompt">
-                                    <rect key="frame" x="32.666666666666657" y="0.0" width="327.66666666666674" height="20.333333333333332"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slide to change the size of the chessboard. Current size is 8 x 8." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eca-5L-R34" userLabel="Chessboard size prompt">
+                                    <rect key="frame" x="30.666666666666657" y="0.0" width="332" height="40.666666666666664"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tX5-OV-Je6" userLabel="Slider Container View">
-                                    <rect key="frame" x="16" y="28.333333333333314" width="361" height="30"/>
+                                    <rect key="frame" x="16" y="48.666666666666686" width="361" height="30"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="oe8-hc-qTc">
                                             <rect key="frame" x="20" y="0.0" width="321" height="30"/>
@@ -90,7 +91,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iWO-Ya-IP3" userLabel="Mode Selection Container View">
-                                    <rect key="frame" x="16" y="66.333333333333314" width="361" height="59.333333333333343"/>
+                                    <rect key="frame" x="16" y="86.666666666666686" width="361" height="59.333333333333343"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What would you like to place on the board?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4b-lS-gwq">
                                             <rect key="frame" x="0.0" y="0.0" width="361" height="20.333333333333332"/>
@@ -135,7 +136,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WS9-2r-kcj" userLabel="Buttons Container View">
-                                    <rect key="frame" x="0.0" y="133.66666666666669" width="393" height="140.33333333333331"/>
+                                    <rect key="frame" x="0.0" y="154.00000000000006" width="393" height="140.33333333333331"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="uDo-hC-t0k">
                                             <rect key="frame" x="69.333333333333329" y="0.0" width="254.66666666666669" height="140.33333333333334"/>
@@ -147,7 +148,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Rp-qJ-Ahq">
-                                                    <rect key="frame" x="0.0" y="36.333333333333371" width="254.66666666666666" height="44"/>
+                                                    <rect key="frame" x="0.0" y="36.333333333333258" width="254.66666666666666" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="vmF-uX-Xfx"/>
                                                     </constraints>
@@ -160,7 +161,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MBv-rz-80B">
-                                                    <rect key="frame" x="0.0" y="96.333333333333371" width="254.66666666666666" height="44"/>
+                                                    <rect key="frame" x="0.0" y="96.333333333333258" width="254.66666666666666" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="WSk-eI-uDc"/>
                                                     </constraints>
